--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Faizal Azman",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
