--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Faizal Azman",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "swagger-ui-express": "^4.3.0"
   },
