--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "start" : "node server.js"
+    "start": "node server.js"
   },
   "author": "Faizal Azman",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.25.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "swagger-ui-express": "^4.3.0"
