--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.25.0",
     "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.1",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
