add upload image functionality

--- a/config.env
+++ b/config.env
@@ -1,1 +1,2 @@
 DATABASE = mongodb+srv://Faizal:Azman@cluster0.pce3c.mongodb.net/LAP?retryWrites=true&w=majority
+IMGBB = 36377fb0790077c1565ca9ec28c0c221
