--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
+    "pdfkit": "^0.13.0",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
