--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.2.1",
     "multer": "^1.4.4",
     "pdfkit": "^0.13.0",
+    "sharp": "^0.30.1",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
